--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,23 +9,49 @@
   <link rel="stylesheet" href="./style.css">
   <script src="./main.js" defer=""></script>
 </head>
+
 <body>
-
-  How did we do?
-
-  Please let us know how we did with your support request. All feedback is appreciated 
-  to help us improve our offering!
-
-  1 2 3 4 5
-
-  Submit
-
-  You selected out of 5
-
-  Thank you!
-
-  We appreciate you taking the time to give a rating. If you ever need more support, 
-  don’t hesitate to get in touch!
-
+  <div class="card">
+    <div class="card-container">
+      <div class="rating-section">
+        <div class="star-icon">
+          <img src="./images/icon-star.svg" alt="star">
+        </div>
+        <h2 class="tittle">
+          How did we do?
+        </h2>
+        <p class="description">
+          Please let us know how we did with your support request. All feedback is appreciated
+          to help us improve our offering!
+        </p>
+        <div class="ratings">
+          <span>1</span>
+          <span>2</span>
+          <span>3</span>
+          <span>4</span>
+          <span>5</span>
+        </div>
+        <button class="submit-btn">
+          Submit
+        </button>
+      </div>
+      <div class="thank-section">
+        <img src="./images/illustration-thank-you.svg" alt="thank">
+        <div class="chip">
+          <p>
+            You selected <span id="rate"></span> out of 5
+          </p>
+        </div>
+        <h2 class="tittle">
+          Thank you!
+        </h2>
+        <p class="description">
+          We appreciate you taking the time to give a rating. If you ever need more support,
+          don’t hesitate to get in touch!
+        </p>
+      </div>
+    </div>
+  </div> 
 </body>
+
 </html>
