--- a/index.html
+++ b/index.html
@@ -15,14 +15,12 @@
     <div class="card-container">
       <div class="rating-section">
         <div class="star-icon">
-          <img src="./images/icon-star.svg" alt="star">
+          <img src="./images/icon-star.svg" alt="star" />
         </div>
-        <h2 class="tittle">
-          How did we do?
-        </h2>
+        <h2 class="title">How did we do?</h2>
         <p class="description">
-          Please let us know how we did with your support request. All feedback is appreciated
-          to help us improve our offering!
+          Please let us know how we did with your support request. All
+          feedback is appreciated to help us improve our offering!
         </p>
         <div class="ratings">
           <span>1</span>
@@ -31,27 +29,21 @@
           <span>4</span>
           <span>5</span>
         </div>
-        <button class="submit-btn">
-          Submit
-        </button>
+        <button class="submit-btn">Submit</button>
       </div>
-      <div class="thank-section">
-        <img src="./images/illustration-thank-you.svg" alt="thank">
+      <div class="thank-section hidden">
+        <img src="./images/illustration-thank-you.svg" alt="thank you" />
         <div class="chip">
-          <p>
-            You selected <span id="rate"></span> out of 5
-          </p>
+          <p>You selected <span id="rate"></span> out of 5</p>
         </div>
-        <h2 class="tittle">
-          Thank you!
-        </h2>
+        <h2 class="title">Thank you!</h2>
         <p class="description">
-          We appreciate you taking the time to give a rating. If you ever need more support,
-          don’t hesitate to get in touch!
+          We appreciate you taking the time to give a rating. If you ever need
+          more support, don’t hesitate to get in touch!
         </p>
       </div>
     </div>
-  </div> 
+  </div>
 </body>
 
 </html>
